2004-02-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/new-part-combine-solo-global.ly: new file.

	* scm/part-combiner.scm: rewrite.

2004-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Handle @include.  Add progress
	indication.  Fixes for verbatim, multi line comments.

2004-02-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/new-part-combine-solo.ly: more cases.

	* lily/slur.cc (height): robustness fix.

	* lily/new-part-combine-iterator.cc (process): add apart-spanner. 

	* input/mutopia/F.Schubert/morgenlied.ly (melody): revert
	stemUp/stemDown.

	* scm/music-functions.scm (determine-split-list): further analysis.

	* lily/script-engraver.cc (try_music): discard duplicate
	articulations.

	* input/regression/new-part-combine-solo.ly: new file

	* input/regression/new-part-combine-a2.ly: new file.

	* ly/performer-init.ly: add Devnull

	* scripts/convert-ly.py (FatalConversionError.sub_acc): add rule
	for \musicglyph #"accidental-*"
	(conv): \newpartcombine rule.

2004-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Handle @lilypondfile, bugfixes.

2004-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Handle verbatim, latex
	textwidth, --output.

2004-02-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/new-markup.scm (doubleflat): add accidental markups.

	* VERSION: release 2.1.17
	
	* Documentation/user/refman.itely (Automatic part combining):
	revise documentation of the part-combiner.

	* input/regression/pc-switch-slur.ly (texidoc): remove file.
	
	* input/test/part-combine-{moment,staff}.ly: remove file.

	* input/regression/pc-mmrest.ly (two): remove file.

	* scm/define-music-types.scm (music-descriptions): add
	Solo{One,Two}Event and UnisonoEvent

	* lily/new-part-combine-iterator.cc (unisono): add state_
	variable, signal changes with part-combine-event.

	* input/regression/new-part-combine-text.ly: new file.
