@@ -37,18 +37,20 @@ Vertical_align_engraver::process_music ()
     {
       valign_ =make_spanner ("VerticalAlignment");
       valign_->set_bound (LEFT,unsmob_grob (get_property ("currentCommandColumn")));
-      announce_grob(valign_ , SCM_EOL);
+      announce_grob (valign_ , SCM_EOL);
     }
 }
 
 void
 Vertical_align_engraver::finalize ()
 {
-  valign_->set_bound (RIGHT,unsmob_grob (get_property ("currentCommandColumn")));
-  typeset_grob (valign_);
-  valign_ =0;
+  if (valign_)
+    {
+      valign_->set_bound (RIGHT,unsmob_grob (get_property ("currentCommandColumn")));
+      typeset_grob (valign_);
+      valign_ =0;
+    }
 }
-
 
 bool
 Vertical_align_engraver::qualifies_b (Grob_info i) const
